--- a/src/main/resources/templates/training/traininglist.html
+++ b/src/main/resources/templates/training/traininglist.html
@@ -49,7 +49,8 @@
 <br>
 <!-- Navbar -->
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-    <a th:href="@{/teacher/list}" class="btn btn-sm btn btn-outline-light">講師一覧へ</a>
+    <a th:href="@{/teacher/list}" class="btn btn-sm btn btn-outline-light me-2">講師一覧へ</a>
+    <a th:href="@{/consignor/list}" class="btn btn-sm btn btn-outline-light">種別一覧へ</a>
 </nav>
 <script>
     <!--/* 削除確認メッセージ */-->
