--- a/src/main/resources/templates/teacher/teacherinfo.html
+++ b/src/main/resources/templates/teacher/teacherinfo.html
@@ -3,7 +3,7 @@
 
 <head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [講師情報]', scripts = ~{::script}, links = ~{::link})"></head>
 <body>
-<div class="container">
+<div class="container col-6">
   <br>
   <h2>講師情報</h2>
   <br>
@@ -16,7 +16,7 @@
     <div class="text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
     <div class="input-group mb-3">
       <span class="input-group-text">講師名</span>
-      <input type="text" class="form-control" th:field="*{name}" />
+      <input type="text" class="form-control" th:field="*{name}" th:errorclass="is-invalid"  />
     </div>
 
     <br>
