--- a/src/main/resources/templates/training/traininginfo.html
+++ b/src/main/resources/templates/training/traininginfo.html
@@ -4,7 +4,7 @@
 <head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [訓練情報]', scripts = ~{::script}, links = ~{::link})"></head>
 
 <body>
-	<div class="container">
+	<div class="container col-6">
 		<br>
 		<h2>訓練情報</h2>
 		<!--/* 新規登録の場合「訓練スケジュール登録」ボタン非表示 */-->
