・コード整備

--- a/src/main/resources/templates/consignor/consignorlist.html
+++ b/src/main/resources/templates/consignor/consignorlist.html
@@ -31,12 +31,12 @@
 </div>
 <br>
 <br>
-<!-- Navbar -->
+<!--/* Navbar */-->
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-    <a th:href="@{/training/list}" class="btn btn-sm btn btn-outline-light">訓練一覧へ</a>
+    <a th:href="@{/training/list}" class="btn btn-sm btn btn-outline-light">&nbsp;戻る&nbsp;</a>
 </nav>
 <script>
-    <!-- 削除確認メッセージ -->
+    <!--/* 削除確認メッセージ */-->
 	function confirm_delete(data) {
 		return window.confirm(data + "を削除しますか？")
     };
