--- a/src/main/resources/templates/training/timetable.html
+++ b/src/main/resources/templates/training/timetable.html
@@ -40,8 +40,9 @@
     <br>
     <!--/* Navbar */-->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-        <a th:href="@{/training/list}" class="btn btn-sm btn-outline-light btn-sm me-2">訓練一覧へ</a>
-        <a th:href="@{/training/editschedule/{id}(id=${id})}" class="btn btn-sm btn-outline-light">訓練スケジュール登録へ</a>
+        <a th:href="@{/training/list}" class="btn btn-sm btn-outline-light btn-sm">&nbsp;戻る&nbsp;</a>
+        <!--/* <a th:href="@{/training/list}" class="btn btn-sm btn-outline-light btn-sm me-2">訓練一覧へ</a> */-->
+        <!--/* <a th:href="@{/training/editschedule/{id}(id=${id})}" class="btn btn-sm btn-outline-light">訓練スケジュール登録へ</a> */-->
     </nav>
     <!--/* contextmenu */-->
     <div id="contextmenu">
