--- a/src/main/resources/templates/training/traininglist.html
+++ b/src/main/resources/templates/training/traininglist.html
@@ -2,7 +2,6 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 
 <head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [訓練一覧]', scripts = ~{::script}, links = ~{::link})"></head>
-
 <body>
 <div class="container">
     <br>
@@ -47,11 +46,30 @@
 </div>
 <br>
 <br>
-<!-- Navbar -->
+<!--/* Navbar */-->
 <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark">
-    <a th:href="@{/teacher/list}" class="btn btn-sm btn btn-outline-light me-2">講師一覧へ</a>
-    <a th:href="@{/consignor/list}" class="btn btn-sm btn btn-outline-light">種別一覧へ</a>
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse dropup" id="navbarNavDarkDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                        MENU
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                        <li><a th:href="@{/teacher/list}" class="dropdown-item">講師一覧</a></li>
+                        <li><a th:href="@{/consignor/list}" class="dropdown-item">種別一覧</a></li>
+                        <li><a th:href="@{/training/editschedule}" class="dropdown-item">訓練スケジュール一覧</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
+<!--/* <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark"> */-->
+<!--/*    <a th:href="@{/teacher/list}" class="btn btn-sm btn-outline-light me-2">講師一覧へ</a> */-->
+<!--/*    <a th:href="@{/consignor/list}" class="btn btn-sm btn-outline-light">種別一覧へ</a> */-->
+<!--/*    <a th:href="@{/training/editschedule}" class="btn btn-sm btn-outline-light">訓練スケジュール一覧へ</a> */-->
+<!--/* </nav> */-->
 <script>
     <!--/* 削除確認メッセージ */-->
 	function confirm_delete(data) {
