・コード整備

--- a/src/main/resources/templates/consignor/consignorlist.html
+++ b/src/main/resources/templates/consignor/consignorlist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 
-<head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [種別一覧]', scripts = ~{::script}, links = ~{::link})"></head>
+<head th:replace="common/head :: head_fragment('講師割当アプリケーション [種別一覧]', ~{::script}, ~{::link})"></head>
 <body>
 <div class="container col-6">
     <br>
