--- a/src/main/resources/templates/training/editschedule.html
+++ b/src/main/resources/templates/training/editschedule.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 
-<head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [スケジュール登録]', scripts = ~{::script}, links = ~{::link})"></head>
+<head th:replace="common/head :: head_fragment('講師割当アプリケーション [スケジュール登録]', ~{::script}, ~{::link})"></head>
 <body>
 <nav class="navbar sticky-top bg-body-tertiary">
     <div class="container">
