--- a/src/main/resources/templates/training/timetable.html
+++ b/src/main/resources/templates/training/timetable.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 
-<head th:replace="common/head :: head_fragment(title = '講師割当アプリケーション [訓練時間表]', scripts = ~{::script}, links = ~{::link})">
+<head th:replace="common/head :: head_fragment('講師割当アプリケーション [訓練時間表]', ~{::script}, ~{::link})">
 </head>
 <body>
     <h5><span th:text="${trainingname}"></span></h5>
